feat: OpenWeatherMap api integration added
