# docs/swagger.yaml
@@ -1,5 +1,13 @@
 basePath: /api/v1
 definitions:
+  domain.Unit:
+    enum:
+    - metric
+    - imperial
+    type: string
+    x-enum-varnames:
+    - Metric
+    - Imperial
   domain.Weather:
     properties:
       city_name:
@@ -18,6 +26,8 @@ definitions:
         type: string
       temperature:
         type: number
+      unit:
+        $ref: '#/definitions/domain.Unit'
       updated_at:
         type: string
       wind_speed:
@@ -67,6 +77,8 @@ paths:
             cityName:
               type: string
             country:
+              type: string
+            units:
               type: string
           type: object
       produces:
